Reorganize front-end project

--- a/front-end/templates/authentification/greetingView.html
+++ b/front-end/templates/authentification/greetingView.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Senseira : Greeting</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link type="text/css" rel="stylesheet" href="css/reset.css">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap-theme.css"/>
-    <link type="text/css" rel="stylesheet" href="css/core.css">
-    <script type="text/javascript" src="scripts/frameworks/jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="scripts/frameworks/knockout-3.4.0.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../css/reset.css">
+    <link type="text/css" rel="stylesheet" href="../../css/bootstrap/bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/bootstrap/bootstrap-theme.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/core.css">
+    <script type="text/javascript" src="../../scripts/frameworks/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="../../scripts/frameworks/knockout-3.4.0.js"></script>
+    <script type="text/javascript" src="../../scripts/bootstrap/bootstrap.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -54,7 +54,7 @@
 
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="images/teaching.jpg" alt="no image">
+                        <img src="../../images/teaching.jpg" alt="no image">
                         <div class="carousel-caption">
                             <h3>
                                 Контролируйте процесс!
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/learning.jpg" alt="no image">
+                        <img src="../../images/learning.jpg" alt="no image">
                         <div class="carousel-caption carousel-caption-top">
                             <h3>
                                 Планируйте!
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/exams.jpg" alt="no image">
+                        <img src="../../images/exams.jpg" alt="no image">
                         <div class="carousel-caption">
                             <h3>
                                 Не сдавайтесь!
@@ -88,7 +88,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="images/control-exams.jpg" alt="no image">
+                        <img src="../../images/control-exams.jpg" alt="no image">
                         <div class="carousel-caption carousel-caption-top">
                             <h3>
                                 Сессия уже близко!
@@ -136,7 +136,7 @@
                         </li>
                     </ul>
                     <div class="description-image-container">
-                        <img class="description-image img-responsive img-circle" src="images/teacher.jpg" alt="no-image"/>
+                        <img class="description-image img-responsive img-circle" src="../../images/teacher.jpg" alt="no-image"/>
                     </div>
                 </div>
                 <div class="description">
@@ -164,26 +164,26 @@
                         </li>
                     </ul>
                     <div class="description-image-container">
-                        <img class="description-image img-responsive img-circle" src="images/students.jpg" alt="no-image"/>
+                        <img class="description-image img-responsive img-circle" src="../../images/students.jpg" alt="no-image"/>
                     </div>
                 </div>
             </div>
 
             <div class="system-work-examples">
                 <div class="example">
-                    <img class="img-responsive img-thumbnail example-image" src="images/example.png" alt="no-image"/>
+                    <img class="img-responsive img-thumbnail example-image" src="../../images/example.png" alt="no-image"/>
                     <p class="text-center">
                         Пример работы
                     </p>
                 </div>
                 <div class="example">
-                    <img class="img-responsive img-thumbnail example-image" src="images/example.png" alt="no-image"/>
+                    <img class="img-responsive img-thumbnail example-image" src="../../images/example.png" alt="no-image"/>
                     <p class="text-center">
                         Пример работы
                     </p>
                 </div>
                 <div class="example">
-                    <img class="img-responsive img-thumbnail example-image" src="images/example.png" alt="no-image"/>
+                    <img class="img-responsive img-thumbnail example-image" src="../../images/example.png" alt="no-image"/>
                     <p class="text-center">
                         Пример работы
                     </p>
@@ -199,7 +199,7 @@
         </footer>
     </div>
     <!-- Body script place -->
-    <script type="text/javascript" src="scripts/custom/plugins.js"></script>
+    <script type="text/javascript" src="../../scripts/custom/plugins/bootstrapPluginsInit.js"></script>
     <!-- Body script place -->
 </body>
 </html>
