--- a/front-end/templates/authentification/signInView.html
+++ b/front-end/templates/authentification/signInView.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Senseira : Sign In</title>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link type="text/css" rel="stylesheet" href="css/reset.css"/>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap.css"/>
-    <link type="text/css" rel="stylesheet" href="css/bootstrap/bootstrap-theme.css"/>
-    <link type="text/css" rel="stylesheet" href="css/core.css"/>
-    <link type="text/css" rel="stylesheet" href="css/animate.css"/>
-    <script type="text/javascript" src="scripts/frameworks/jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="scripts/frameworks/knockout-3.4.0.js"></script>
-    <script type="text/javascript" src="scripts/frameworks/jquery.noty.packaged.min.js"></script>
-    <script type="text/javascript" src="scripts/bootstrap/bootstrap.js"></script>
-    <script type="text/javascript" src="scripts/custom/alert.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../css/reset.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/bootstrap/bootstrap.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/bootstrap/bootstrap-theme.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/core.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/animate.css"/>
+    <script type="text/javascript" src="../../scripts/frameworks/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="../../scripts/frameworks/knockout-3.4.0.js"></script>
+    <script type="text/javascript" src="../../scripts/frameworks/jquery.noty.packaged.min.js"></script>
+    <script type="text/javascript" src="../../scripts/bootstrap/bootstrap.js"></script>
+    <script type="text/javascript" src="../../scripts/custom/plugins/alert.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -103,11 +103,11 @@
     </footer>
 </div>
 <!-- Body script place -->
-<script type="text/javascript" src="scripts/custom/plugins.js"></script>
-<script type="text/javascript" src="scripts/custom/initialAlerting.js"></script>
-<script type="text/javascript" src="scripts/senseira/constants.js"></script>
-<script type="text/javascript" src="scripts/senseira/baseForm.js"></script>
-<script type="text/javascript" src="scripts/senseira/signIn.js"></script>
+<script type="text/javascript" src="../../scripts/custom/plugins/bootstrapPluginsInit.js"></script>
+<script type="text/javascript" src="../../scripts/custom/plugins/initialAlerting.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/common/constants.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/common/baseForm.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/authentification/signIn.js"></script>
 <!-- Body script place -->
 </body>
 </html>
