--- a/front-end/templates/teacher_account/lab_issuance/labsIssuanceView.html
+++ b/front-end/templates/teacher_account/lab_issuance/labsIssuanceView.html
@@ -37,7 +37,7 @@
     </ul>
 
     <!-- Filters partial view -->
-    <div class="filters-group clearfix">
+    <div class="header-group clearfix">
         <form class="form-inline pull-right">
             <div class="form-group">
                 <label for="groupSelect"></label>
