--- a/front-end/templates/testing/tests.html
+++ b/front-end/templates/testing/tests.html
@@ -10,6 +10,7 @@
 <script src="../../node_modules/chai/chai.js"></script>
 
 <script>
+    window.testingMode = true;
     mocha.setup('bdd');
     mocha.reporter('html');
 </script>
@@ -30,6 +31,10 @@
 <script type="text/javascript" src="../../scripts/senseira/teacher_account/lab_issuance/forms/taskAddingModal.js"></script>
 <script type="text/javascript" src="../../scripts/senseira/teacher_account/lab_issuance/forms/taskIssuanceForm.js"></script>
 <script type="text/javascript" src="../../scripts/senseira/teacher_account/lab_issuance/labIssuance.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/student_account/group_management/forms/subgroupAddingModal.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/student_account/group_management/forms/listEditingModal.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/student_account/group_management/forms/warningBeforeGroupDeletingModal.js"></script>
+<script type="text/javascript" src="../../scripts/senseira/student_account/group_management/groupManagement.js"></script>
 
 <!-- Tests -->
 <script src="../../scripts/senseira/testing/tests.js"></script>
